crates/toml/tests/snapshots/invalid/integer/leading-zero-sign-2.stderr
TOML parse error at line 1, column 24
  |
1 | leading-zero-sign-2 = +01
  |                        ^
unexpected leading zero, expected nothing
